test/testcases/malgo/error/InvalidPattern.mlg
module InvalidPattern = {
  module {..} = import Builtin
  module {..} = import Prelude

  def isNil = {
    [] -> True,
    _ _ -> False,
--    ^ different number of patterns
  }

  def main = { putStrLn "OK" }
}

-- Expected: OK
